--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,13 @@
-# Prerequisites
-*.d
+# Build folder
+/bin/
+/bin-int/
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# Git folder
+.git/
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+# Visual Studio files and directories
+.vs/
+*.sln
+*.vxproj
+*.vcxproj
+*.vcxproj.filters
